deploy/kafka-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: web-grading
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: ghcr.io/kafbat/kafka-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kafka-ca
              mountPath: /etc/kafka/secrets
              readOnly: true
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - aivencloud.com
      volumes:
        - name: kafka-ca
          secret:
            secretName: kafka-aiven-credentials
            optional: true
            items:
              - key: ca.pem
                path: ca.pem
