deploy/kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: web-grading
spec:
  selector:
    app: kafka-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
